--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,57 +1,42 @@
-#HOME {
-    height: calc(100vh - 4rem);
-    width: 100%;
-    max-width: 85rem;
-    margin: 0 auto;
+.container, .aboutContainer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    margin: 20px 100px 0px 100px;
+}
+
+.imageContainer {
+    flex: 1;
+}
+
+.textContainer {
+    flex: 1
+}
+
+.textContainer h1 {
     font-size: 3rem;
 }
 
-.box {
-    flex:1;
-    margin: 1rem;
-}
-
-.box > p {
-    padding: 0.2rem;
-}
-
-.second-text, .third-text, .fourth-text {
-    color: #2EC4B6;
-}
-
-.second-text, .third-text, .fourth-text {
-    opacity: 0;
-    animation: fadeIn 6s infinite; 
-}
-
-.second-text {
-    animation-delay: 0s;
-}
-
-.third-text {
-    animation-delay: 2s; 
-}
-
-.fourth-text {
-    animation-delay: 4s; 
+.textContainer p {
+    font-size: 1.6rem;
+    font-weight: 400;
 }
 
 @media (max-width: 800px) {
-    #HOME {
-      flex-direction: column;
-      height: auto;
+    .container, .aboutContainer {
+        flex-direction: column;
+        height: auto;
+        margin: 10px 20px 0px 20px
     }
-    .image-box {
+
+    .imageContainer {
         display: none;
+    }
+
+    .textContainer {
+        margin: 10px 20px 5px 20px
     }
 }
 
-@keyframes fadeIn {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { opacity: 0; }
-}
 
