--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
     height: 5rem;
     width: 100vw;
     max-width: 75rem;
@@ -61,4 +61,101 @@
 @keyframes fadein {
     from { opacity: 0; }
     to { opacity: 1; }
+} */
+
+.name {
+  display: flex;
+  margin: 3rem 1rem;
+  font-size: 2rem;
+  font-weight: bold;
+  text-decoration: none;
+  color: var(--textColor)
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  animation: fadein 4s;
+  /* position: sticky;
+  top: 0; */
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
+nav .logo {
+    object-fit: cover;
+    height: 3rem;
+    width: 3rem;
+    margin: 1rem;
+    transition: 0.5s;
+}
+
+.navbar-list-item {
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: var(--textColor);
+    text-decoration: none;
+}
+
+.active {
+  border-bottom: 3px solid var(--textColor);
+  color: var(--textColor);
+}
+
+.navbar-list-item:not(.active):hover {
+    color: var(--textColor);
+    padding-bottom: 0.5rem;
+    border-bottom: 3px solid var(--hoverColor);
+}
+
+nav .hamburger {
+  display: none;
+  position: absolute;
+  top: 0.75rem;
+  right: 0.5rem;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 2.25rem;
+  height: 2rem;
+}
+
+nav .hamburger span {
+  height: 0.4rem;
+  width: 100%;
+  background-color: #fff;
+  border-radius: 0.2rem;
+}
+
+@media (max-width: 480px) {
+  .menu {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    justify-content: space-between;
+    text-align: center;
+  }
+  nav .hamburger {
+    display: flex;
+  }
+  nav {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .navbar-list-item {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 0.25rem;
+  }
+
+  .open {
+    display: flex;
+  }
 }
